--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,17 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <h1>Forum</h1>
     <form method="post" action="/login">
         <input type="text" name="username" placeholder="Username"> <br>
         <input type="password" name="password" placeholder="Password"> <br>
-        <button>Login</button>
-        <a href="/signup">
-            <p>Create Account</p>
-        </a>
+        <input type="password" name="password" placeholder="Retype Password"> <br>
+        <button>Sign Up</button>
     </form>
 </body>
 </html>
