ubah nama jadi kuskus

--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="../public/style.css">
+    <link rel="stylesheet" type="text/css" href="../public/style.css">
 </head>
 
 <body>
     <div class="landingPageContent">
-        <h1>Forum</h1>
+        <h1>KusKus</h1>
         <div class="button">
             <a href="/login">
                 <button type="button" id="login">LOGIN</button>
