--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,7 +5,7 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <h1>Forum</h1>
+    <h1>KusKus</h1>
     <form method="post" action="/login">
         <input type="text" name="username" placeholder="Username"> <br>
         <input type="password" name="password" placeholder="Password"> <br>
