rapihin style landingpage

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-/* .landingPageContent{
-    margin-left: 100px;
-    padding-top: 200px;
-} */
+.landingPageContent{
+    text-align: center;
+    padding-top: 100px;
+}
