--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
-    <link rel="stylesheet" type="text/css" href="../public/style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 
 <body>
