--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,25 +2,34 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/login.css"  />
+    <link rel="stylesheet" type="text/css" href="/login.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Login</title>
 </head>
+
 <body id="bod">
     <h1>KusKus</h1>
     <form method="get" action="/logincheck">
-        <input type="text" name="username" id="username" placeholder="Username"> <br>
-        <input type="password" name="password" placeholder="Password"> <br>
-        <button onClick="setSession()">Login</button>
-     
+        <input type="text" name="username" id="username" placeholder="Username">
+        <br>
+        <br>
+        <input type="password" name="password" id="pass" placeholder="Password">
+        <br>
+        <br>
+        <button onClick="setSession()" id="login">Login</button>
+
     </form>
     <a href="/signup">
         <p>Create Account</p>
     </a>
 </body>
+
 </html>
 <script>
-function setSession(){
-localStorage.setItem('user',document.getElementById('username').value);
-}
+    function setSession() {
+        localStorage.setItem('user', document.getElementById('username').value);
+    }
 </script>
