--- a/public/login.css
+++ b/public/login.css
@@ -2,6 +2,42 @@ html{
     position: relative;
 }
 #bod{
+    padding-top: 100px;
     text-align: center;
-    border: 3px solid green;
+}
+h1{
+    font-size: 90pt;
+    font-family: 'Italianno', cursive;
+    margin-bottom: 0px;
+}
+#username{
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    width: 200px;
+    height: 30px;
+    border-radius: 10px;
+}
+#pass{
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    width: 200px;
+    height: 30px;
+    border-radius: 10px;
+}
+#login{
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    width: 200px;
+    height: 30px;
+    border-radius: 10px;
+}
+#login:hover{
+    background-color: rgb(177, 177, 177);
+}
+a{
+    text-decoration: none;
+    color: #000000;
+}
+a:hover{
+    color: rgb(157, 138, 63);
 }
