--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>Landing Page</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -14,6 +17,7 @@
             <a href="/login">
                 <button type="button" id="login">LOGIN</button>
             </a>
+            <br>
             <br>
             <a href="/signup">
                 <button type="button" id="signup">SIGNUP</button>
