--- a/public/mythread.css
+++ b/public/mythread.css
@@ -1,15 +1,26 @@
 header{
-    /* background-color: #c2281d; */
-    
     display: flex;
     justify-content: space-around;
-    /* font-family: sans-serif; */
+    padding-right: 100px;
     padding-left: 0px;
+    margin-left: 0px;
+    padding-top: 10px;
+    /* background-image: url(/headerback.jpg); */
 }
-#kuskus{
+header a{
+    text-decoration: none;
+    color: black;
+    padding-top: 5px;
+    font-size: 15pt;
+}
+header a:hover{
+    color: rgb(157, 138, 63);
+}
+#namaWeb{
     font-family: 'Italianno', cursive;
-    font-size: 30pt;
-    margin-bottom: 0;
+    font-size: 50pt;
+    padding-top: 0px;
+    margin-top: 0px;
 }
 #content{
     border: solid;
