--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -42,7 +42,7 @@
             <br>
             <textarea id="yourthread" name="textthread" rows="4" cols="50"></textarea>
             <br>
-            <button onClick="postthread()">Submit</button>
+            <button onClick="postthread()" id="submit">Submit</button>
         </div>
         <div id="searc"> 
             <input type="text" id="search" name="search" placeholder="Find Threads" onkeyup="search()">
