--- a/views/mythreads.ejs
+++ b/views/mythreads.ejs
@@ -34,7 +34,7 @@
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
-        <h1>My Thread</h1>
+        <h1 id="h1page">My Thread</h1>
         <div> 
             <input type="text" id="search" name="search" onkeyup="search()">
         </div>
