--- a/public/homepage.css
+++ b/public/homepage.css
@@ -22,6 +22,19 @@ header a:hover{
     padding-top: 0px;
     margin-top: 0px;
 }
+#h1page{
+    text-align: center;
+}
+#submit{
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    width: 100px;
+    height: 30px;
+    border-radius: 7px;
+}
+#submit:hover{
+    background-color: rgb(177, 177, 177);
+}
 #content{
     border: solid;
     border-radius: 3px;
@@ -56,6 +69,6 @@ header a:hover{
 #category{
     text-align: left;
 }
-#urcom{
-    float: right;
-}
+/* #urcom{
+    font-size: 80pt;
+} */
