--- a/public/signup.css
+++ b/public/signup.css
@@ -10,21 +10,7 @@ h1{
     font-family: 'Italianno', cursive;
     margin-bottom: 0px;
 }
-#username{
-    background: #FFFFFF;
-    border: 2px solid #000000;
-    width: 200px;
-    height: 30px;
-    border-radius: 10px;
-}
-#pass{
-    background: #FFFFFF;
-    border: 2px solid #000000;
-    width: 200px;
-    height: 30px;
-    border-radius: 10px;
-}
-#repass{
+#username, #nickname, #email, #pass{
     background: #FFFFFF;
     border: 2px solid #000000;
     width: 200px;
