--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
-    <script type="text/javascript" src= "/homepage.js"></script>
+    <script type="text/javascript" src="/homepage.js"></script>
 </head>
+
 <body>
     <header>
         <h1 id="namaWeb">KusKus</h1>
@@ -22,34 +23,30 @@
         <a href="/login">
             <h3>Log Out</h3>
         </a>
-        <div class="icon">
-            <i class="fa fa-search"></i>
-            <i class="fa fa-user"></i>
-        </div>
     </header>
-    <body>
+    <div class="konten">
         <div class="d-flex justify-content-center">
-            <div class="spinner-border" 
-                 role="status" id="loading">
+            <div class="spinner-border" role="status" id="loading">
                 <span class="sr-only">Loading...</span>
             </div>
         </div>
         <h1 id="h1page">Thread</h1>
-        <div id="make"> 
+        <div id="make">
             <label for="yourthread">Post Thread</label>
             <br>
             <select name="category" id="category"></select>
             <br>
             <textarea id="yourthread" name="textthread" rows="4" cols="50"></textarea>
             <br>
-            <button onClick="postthread()" id="submit">Submit</button>
+            <button onClick="postthread()" id="submit">Post</button>
         </div>
-        <div id="searc"> 
+        <div id="searchBar">
             <input type="text" id="search" name="search" placeholder="Find Threads" onkeyup="search()">
         </div>
-        <div id="threadArray">
-        </div>
+        <br>
+        <div id="threadArray"></div>
         <div id="pagination"></div>
+    </div>
 </body>
 
 </html>
