--- a/views/mythreads.ejs
+++ b/views/mythreads.ejs
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
-    <script type="text/javascript" src= "/mythread.js"></script>
+    <script type="text/javascript" src="/mythread.js"></script>
 </head>
+
 <body>
     <header>
         <h1 id="namaWeb">KusKus</h1>
@@ -23,24 +24,26 @@
             <h3>Log Out</h3>
         </a>
     </header>
+
     <body>
-        <div class="d-flex justify-content-center">
-            <div class="spinner-border" 
-                 role="status" id="loading">
-                <span class="sr-only">Loading...</span>
+        <div class="konten">
+            <div class="d-flex justify-content-center">
+                <div class="spinner-border" role="status" id="loading">
+                    <span class="sr-only">Loading...</span>
+                </div>
             </div>
+            <h1 id="h1page">My Thread</h1>
+            <div id="searchBar">
+                <input type="text" id="search" name="search" onkeyup="search()" placeholder="Find your threads">
+            </div>
+            <br>
+            <br>
+            <table id="threadArray"></table>
+            <br>
+            <div id="pagination"></div>
         </div>
-        <h1 id="h1page">My Thread</h1>
-        <div id="searchBar"> 
-            <input type="text" id="search" name="search" onkeyup="search()" placeholder="Find your threads">
-        </div>
-        <br>
-        <br>
-        <table id="threadArray"></table>
-        <br>
-        <div id="pagination"></div>
-        
-</body>
+
+    </body>
 
 
 </html>
